OD-11115 The en-AU locale is broken in Java 9 since short names like "Tue" are now "Tue."