@@ -269,6 +269,7 @@ appBundler {
 			"-DJFileChooser.packageIsTraversable=true",
 			"-Dapple.awt.antialiasing=true",
 			"-Dapple.awt.showGrowBox=true",
+			"-Djava.locale.providers=COMPAT,SPI",
 			"-Xmx${project.maxmemoryServer}"
 	]
 }
